cmake_minimum_required(VERSION 3.12)
project(testopcv)
set(CMAKE_BUILD_TYPE "Release")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
message(STATUS "include path: ${OpenCV_INCLUDE_DIRS}")
add_executable(testopcv testopcv.cpp)
target_link_libraries(testopcv ${OpenCV_LIBS})
